tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/atomic-order-spelling.wyst
module syntax_bad_atomic_order

var word: atomic<u64> = atomic<u64>(0)

fn main() -> u64 {
  return word.load(.acqrel)
}
